it s taking more than we thought

--- a/src/Views/Responsable.fxml
+++ b/src/Views/Responsable.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="all" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: white;" stylesheets="@../Assets/style.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ResponsableController">
+<AnchorPane fx:id="all" id="AnchorPane" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: white;" stylesheets="@../Assets/style.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="Views.ResponsableController">
    <children>
       <Pane prefHeight="114.0" prefWidth="915.0" style="-fx-background-color: #393d72 #393d72;">
          <children>
@@ -20,23 +23,18 @@
                   <Font name="Britannic Bold" size="32.0" />
                </font>
             </Label>
-            <Pane layoutX="-2.0" layoutY="-22.0" prefHeight="183.0" prefWidth="915.0">
+            <Pane fx:id="retour" layoutX="8.0" layoutY="115.0" prefHeight="35.0" prefWidth="38.0" styleClass="profile" stylesheets="@../Assets/style.css">
                <children>
-                  <ImageView fitHeight="114.0" fitWidth="171.0" layoutX="730.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" />
-                  <Pane fx:id="logout" layoutX="859.0" layoutY="60.0" prefHeight="40.0" prefWidth="47.0" styleClass="profile" stylesheets="@../Assets/style.css">
-                     <children>
-                        <ImageView fitHeight="35.0" fitWidth="37.0" layoutX="6.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../Assets/logout.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </Pane>
+                  <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="2.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Assets/retour.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
          </children>
       </Pane>
-      <AnchorPane fx:id="body" layoutY="114.0" prefHeight="486.0" prefWidth="915.0">
+      <AnchorPane fx:id="body" layoutY="149.0" prefHeight="486.0" prefWidth="915.0">
          <children>
             <Pane fx:id="abonnements" layoutX="100.0" layoutY="100.0" prefHeight="132.0" prefWidth="162.0" stylesheets="@../Assets/style.css">
                <children>
@@ -146,17 +144,16 @@
                   <String fx:value="shadow" />
                </styleClass>
             </Pane>
-            <Pane fx:id="retour" layoutX="14.0" layoutY="7.0" prefHeight="35.0" prefWidth="38.0" styleClass="profile" stylesheets="@../Assets/style.css">
-               <children>
-                  <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="7.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Assets/retour.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </Pane>
          </children>
       </AnchorPane>
-
+      <Pane fx:id="logout" layoutX="860.0" layoutY="45.0" prefHeight="40.0" prefWidth="47.0" styleClass="profile" stylesheets="@../Assets/style.css">
+         <children>
+            <ImageView fitHeight="35.0" fitWidth="37.0" layoutX="6.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Assets/logout.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
